--- a/GraphQL.WebApi/appsettings.json
+++ b/GraphQL.WebApi/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "data source=192.168.1.133; initial catalog=ISMS_FINAL;persist security info=True;user id=sa;password=123;MultipleActiveResultSets=True ; Connect Timeout=10000"
+    "DefaultConnection": "data source=DESKTOP-I87BFGH; initial catalog=GraphQLTest;persist security info=True;user id=sa;password=123;MultipleActiveResultSets=True ; Connect Timeout=10000"
     //"DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=jqueryDb;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
